Edits to Introduction

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -188,7 +188,7 @@ to reach.
 In this paper, we introduce the theoretical and
 practical formulation of pulling as a primitive action for positioning
 and orienting objects under uncertainty. An important contribution of
-our approach is showing that when pulling %, even during open-loop control, 
+our approach is showing that, when pulling, %, even during open-loop control, 
 the system uncertainty (error) remains Lyapunov stable. %Next, we highlight the results that enable us to create our primitive action planner for pulling.
 %
 %The insight that motivated this work was our recognition, and
@@ -197,7 +197,7 @@ Consider the following example: if an object is pulled
 in a straight line along a surface, the frictional forces cause the
 object to rotate around the contact point until the object's center of
 mass aligns with the line of motion. We show how algorithms can take advantage of
-this stability to guarantee the object has been pulled into the
+this kind of stability to guarantee the object has been pulled into the
 correct position and orientation.
 
 Our ultimate goal is manipulation, and stability alone is not a sufficient for stable planning. % to enable planning to guarantee convergence. 
