Edits to Introduction

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -200,7 +200,7 @@ mass aligns with the line of motion. We show how algorithms can take advantage o
 this kind of stability to guarantee the object has been pulled into the
 correct position and orientation.
 
-Our ultimate goal is manipulation, and stability alone is not a sufficient for stable planning. % to enable planning to guarantee convergence. 
+Stability alone is not a sufficient for planning with convergence guarantees. % to enable planning to guarantee convergence. 
 A practical planner also requires knowledge of
 the object's rate of convergence to the stable configuration. Toward this
 end, we develop the first known algorithm that computes exact angular
