Edits to Introduction

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -172,8 +172,8 @@ Major contributions:
 % \begin{inparaenum}
 % \item 
 
-Modeling and contending with uncertainty is a fundamental challenge in robotic
-manipulation. Uncertainty can arise from numerous sources including
+Contending with uncertainty is a fundamental challenge in robotic
+manipulation. Uncertainty can arise from many sources including
 limited sensors, incomplete models, and the stochastic effect of executing actions. In this work, we introduce
 robotic pulling as a method of robotic manipulation that remains
 stable in the presence of uncertainty.
