Edits to Background

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -420,7 +420,7 @@ convex in $\mu$, $p(\mathbf{x})$ and $\mathbf{v}^+$.
     \fill (0,0) circle [radius=1.pt];
     \fill (1.2207,0) circle [radius=1.pt] node[below right] {$x_{\text{\tiny IC}}$};
   \end{tikzpicture}
-  \caption{Motion of a press-pulled slider.}
+  \caption{Motion of a press-pulled slider. \BB{Define variables and provide a short explanation of the figure.}}
   \label{fig:presspull-motion}
 \end{figure}
 
