--- a/tex/references.bib
+++ b/tex/references.bib
@@ -91,3 +91,11 @@
   year={1995},
   publisher={Sage Publications Sage CA: Thousand Oaks, CA}
 }
+@inproceedings{tassa2014control,
+  title={Control-limited differential dynamic programming},
+  author={Tassa, Yuval and Mansard, Nicolas and Todorov, Emo},
+  booktitle={Robotics and Automation (ICRA), 2014 IEEE International Conference on},
+  pages={1168--1175},
+  year={2014},
+  organization={IEEE}
+}
